app/assets/stylesheets/site.scss
// Place all the styles related to the site controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html *
{
   font-size: 1.0em;
   color: #000;
   
}
//bootstrap stuff
/*
A custom Bootstrap 3.2 'Google Plus style' theme
from http://bootply.com

This CSS code should follow the 'bootstrap.css'
in your HTML file.

license: MIT
author: bootply.com
*/

@import url(http://fonts.googleapis.com/css?family=Roboto:400);
body {
  background-color:#e0e0e0;
  -webkit-font-smoothing: antialiased;
  font: normal 14px Roboto,arial,sans-serif;
}
.navbar-default {background-color:#f4f4f4;margin-top:50px;border-width:0;z-index:5;}
.navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > li:hover > a {border:0 solid #4285f4;border-bottom-width:2px;font-weight:800;background-color:transparent;}
.navbar-default .dropdown-menu {background-color:#ffffff;}
.navbar-default .dropdown-menu li > a {padding-left:30px;}

.header {background-color:#ffffff;border-width:0;}
.header .navbar-collapse {background-color:#ffffff;}
.btn,.form-control,.panel,.list-group,.well {border-radius:1px;box-shadow:0 0 0;}
.form-control {border-color:#d7d7d7;}
.btn-primary {border-color:transparent;}
.btn-primary,.label-primary,.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {background-color:#4285f4;}
.btn-plus {background-color:#ffffff;border-width:1px;border-color:#dddddd;box-shadow:1px 1px 0 #999999;border-radius:3px;color:#666666;text-shadow:0 0 1px #bbbbbb;}
.well,.panel {border-color:#d2d2d2;box-shadow:0 1px 0 #cfcfcf;border-radius:3px;}
.btn-success,.label-success,.progress-bar-success{background-color:#65b045;}
.btn-info,.label-info,.progress-bar-info{background-color:#a0c3ff;border-color:#a0c3ff;}
.btn-danger,.label-danger,.progress-bar-danger{background-color:#dd4b39;}
.btn-warning,.label-warning,.progress-bar-warning{background-color:#f4b400;color:#444444;}

hr {border-color:#ececec;}
button {
 outline: 0;
}
textarea {
 resize: none;
 outline: 0; 
}
.panel .btn i,.btn span{
 color:#666666;
}
.panel .panel-heading {
 background-color:#ffffff;
 font-weight:700;
 font-size:16px;
 color:#262626;
 border-color:#ffffff;
}
.panel .panel-heading a {
 font-weight:400;
 font-size:11px;
}
.panel .panel-default {
 border-color:#cccccc;
 height: 300px;

}
.panel .panel-thumbnail {
 padding-left:70px;
}
.panel .img-circle {
 width:50px;
 height:50px;
}
.list-group-item:first-child,.list-group-item:last-child {
 border-radius:0;
}
h3,h4,h5 { 
 border:0 solid #efefef; 
 border-bottom-width:1px;
 padding-bottom:10px;
}
.modal-dialog {
 width: 450px;
}
.modal-footer {
 border-width:0;
}
.dropdown-menu {
 background-color:#f4f4f4;
 border-color:#f0f0f0;
 border-radius:0;
 margin-top:-1px;
}
.panel .panel-thumbnail-search {

}
.panelwrappercontent{
 position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
.panelwrapper{
	position: relative;
}
/* end theme */

/* template layout*/
#subnav {
 position:fixed;
 width:100%;
}

@media (max-width: 768px) {
 #subnav {
  padding-top: 6px;
 }
}

#main {
 padding-top:120px;
}
//
.container-fluid{
	padding-left: 0;
	padding-right: 0;
}
.bg {
  background: image-url('mainbanner.jpg') no-repeat center center;
  position: absolute;
  width: 100%;
  height: 700px; /*same height as jumbotron */
  top:0;
  left:0;
  z-index: -1;
}
.topnavnew{
	margin-bottom: 9%;
}
.bottomnav{
	margin-top: 12%;
}
.jumbotron {
  height: 700px;
  color: white;
  text-shadow: #444 0 1px 1px;
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
}

.propertyimg{
	width: 200px;
	height: 200px;
}
.searchresults{
	padding: 0;
	margin: 0;
}
.propertysingle{
	background-color: white;
	margin-left: 6px;
	margin-right: 6px;
	margin-top: 6px;
	margin-bottom: 2px;
	width: 30%;
	height: 500px;
	border-style: groove;
	border-width: 2px;
	border-color: black;
	z-index: 100;
	box-shadow: 10px 10px 5px #888888;
	overflow: scroll;

}
.propsearchbar{
	align: center;
}
.propheading{
	font-weight: bold;
	font-size: 1.4em;
}
.propsubheading{
	font-size: 1.3em;
}
.contentcontainer{
	margin-top: 50px;
	margin-left: 100px;
	margin-right: 100px;
	background-color: white;
}
 .headingbanner{
	width: 100%;
	height: 50em;
}
.navcontainer{
	margin-top: -50px;
	background-color: inherit;
}
.navrow{
	margin-left: 10%;
	margin-right: 10%;
}

.share{
	float: right;
}
.bootcampIMG{
	margin-bottom: 10px;
	height: 100px;
	width: 100px;
}
.cityIMG{
	margin-bottom: 7px;
	height: 150px;
	width: 150px;
	border-radius: 50px;

}
.cities{
	font-size: 16px;
	border-style: groove;
	border-radius: 2.5px;
	
}
.properties{
	font-size: 1.1em;
}
.bootcampheading{
	margin-bottom: 30px;
	background-color: black;
}

.bootcamps{
	font-size: 16px;
	// border-style: groove;
	// border-radius: 5.5px;
	// border-color: black;
	box-shadow: 10px 10px 10px 5px #888888;
}

.headingwrapper{
	display: table;
  width: 100%;
  top: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));
  background-position: center top;
  height: 50em;
  color: white;
  position: absolute;

}
.siteheading{
	color: white;
	font-size: 48px;
	top: 25%;
	left: 30%;
	z-index: 100;
	position: absolute;

}
.submitsearch{
	background-color: transparent;
	
}
.topnav{
	position: absolute;
	z-index: 100;
	top: 20px;
	right: 10%;
	left: 10%;
	width: 100%;
}
.topnav h2{
	z-index: 100;
	width: 100%;
}
.sitesidenote{
	z-index: 100;
	top: 36%;
	left: 40%;
	position: absolute;
	color: white;
	font-size: 18px;
}
.about{
	align: center;
	color: white;
}
.realtors{
}
.ghostbutton {
  width: auto;
  padding: 8px;
  color: #fff;
  background-color: transparent;
  border: 2px solid #fff;
  text-align: center;
  outline: none;
  text-decoration: none;
  transition: color 0.3s ease-out,
              background-color 0.3s ease-out,
              border-color 0.3s ease-out;
}
.ghostbutton:hover,
.ghostbutton:active {
  background-color: #9363c4;
  border-color: #9363c4;
  color: #fff;
  transition: color 0.3s ease-in,
              background-color 0.3s ease-in,
              border-color 0.3s ease-in;
   }

.signin{
	margin-bottom: 10px;
	width: 100%;
}
.cityIMGsmall{
	width: 100%;
	height: 25px;

}
.bootcampcontainer{
	background-color: #c0c8fd;
}
.bootcamphome{
	// margin-bottom: 20px;
	background-color: white;
	// margin-left: 3px;
	// margin-right: 3px;
	// margin-top: 6px;
	// margin-bottom: 6px;
	// width: 20%;
	// border-radius: 50px;
	border-style: groove;
	border-width: 2px;
	border-color: black;
	z-index: 100;
	box-shadow: 10px 10px 5px #888888;

}
.majorheading{
	font-size: 1.4em;
	color: white;
}
.minorheading{
	font-size: 0.8em;
	color: white;
}
.bootcampcities{
	margin-bottom: 4px;
	width: 80%;
}
.smallstuff{
	font-size: 0.6em;
}
.searchli{
	margin-top: -50px;
}
 .search{
 	color: white;
 }
 .missionheading{
 	margin-bottom: 30px;
 	background-color: #B0A3D1;
 }
 .mission{
 	margin-top: 100px;
 }
 .search{
 	margin-top: 20%;
	margin-left: 35%;
 }
 #slider-range{
 	z-index: 100;
 }

